01-eks-gatekeeper/policies/ct-require-runasnonroot.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srunasnonroot
spec:
  crd:
    spec:
      names:
        kind: K8sRunAsNonRoot
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srunasnonroot
      violation[{"msg": msg}] {
        input.review.kind.kind == "Pod"
        some c
        c := input.review.object.spec.containers[_]
        not c.securityContext.runAsNonRoot
        msg := sprintf("runAsNonRoot must be true for container: %v", [c.name])
      }
